gobmkida/c1/purge_persistent_owl_cache
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/purge_persistent_owl_cache/src/engine/persistent.c:1117:6: error: use of undeclared identifier 'purge_persistent_owl_cache_last_purge_position_number'
if ( purge_persistent_owl_cache_last_purge_position_number != position_number ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/purge_persistent_owl_cache/src/engine/persistent.c:1119:1: error: use of undeclared identifier 'purge_persistent_owl_cache_last_purge_position_number'
purge_persistent_owl_cache_last_purge_position_number = position_number; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/purge_persistent_owl_cache/src/engine/persistent.c:1130:71: error: use of undeclared identifier 'owl_cache'
memcpy( &persistent_owl_cache[v1], &persistent_owl_cache[v2], sizeof( owl_cache)); 
                                                                      ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/purge_persistent_owl_cache/src/obj/1/persistent.o] Error 1
